--- a/src/css/common.css
+++ b/src/css/common.css
@@ -24,14 +24,19 @@ button {
 }
 
 .gallery {
-  width: 480px;
+  margin-left: -20px;
+  margin-top: -20px;
+  padding: 0;
+
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
   list-style: none;
 }
 
 .gallery > li {
+  margin-left: 20px;
+  margin-top: 20px;
+  flex-basis: calc(100% / 2 - 20px);
 }
 
 img {
